# AI-4

./: .gitignore  captioning.py  evaluation.py  main.py  pyproject.toml  rag.py  server.py  store.py  test.py  typedefs.py
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
data/: caption_manifest.json  evaluation_manifest.json  image_manifest.json  metadata.json
