[project]
name = "ai-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "gensim>=4.3.3",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "ollama>=0.5.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
]
